--- a/InspectorCaymanSUpdater/MainWindow.xaml
+++ b/InspectorCaymanSUpdater/MainWindow.xaml
@@ -35,15 +35,19 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1" Grid.Column="1" VerticalAlignment="Center">
-            <TextBlock HorizontalAlignment="Center" Foreground="WhiteSmoke" TextWrapping="Wrap" Margin="0 10">
-                <Run> Актуальное обновление ПО:</Run><LineBreak/>
-                <Run Text="{Binding Path=LastSoftwereUpdateDate, TargetNullValue = --/--/--}"/>
-            </TextBlock>
-
-            <TextBlock HorizontalAlignment="Center" Foreground="WhiteSmoke"  TextWrapping="Wrap" Margin="0 10">
-                <Run> Актуальное обновление БД:</Run><LineBreak/>
-                <Run Text="{Binding Path = LastDbUpdateDate, TargetNullValue = --/--/--}"/>
-            </TextBlock>
+            <TextBlock HorizontalAlignment="Center" Foreground="WhiteSmoke" TextWrapping="Wrap" Margin="0,10,0,1"
+                Text ="Актуальное обновление ПО:"
+            />
+            <TextBlock HorizontalAlignment="Center" Foreground="WhiteSmoke" TextWrapping="Wrap" Margin="0,1,0,10"
+                Text="{Binding Path=LastSoftwereUpdateDate, TargetNullValue = --/--/--}"
+            />
+            
+            <TextBlock HorizontalAlignment="Center" Foreground="WhiteSmoke" TextWrapping="Wrap" Margin="0,10,0,1"
+                Text ="Актуальное обновление БД:"
+            />
+            <TextBlock HorizontalAlignment="Center" Foreground="WhiteSmoke" TextWrapping="Wrap" Margin="0,1,0,10"
+                Text="{Binding Path = LastDbUpdateDate, TargetNullValue = --/--/--}"
+            />
         </StackPanel>
     </Grid>
 </Window>
